# rust-fullstack-example

./: installation
backend/: Cargo.toml  db.sql
backend/src/: handler.rs  main.rs
backend/src/db/: mod.rs  user.rs
common/src/: lib.rs
frontend/: Makefile
frontend/src/owner/: create.rs  detail.rs  list.rs
frontend/src/pet/: create.rs
