[package]
name = "backend"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"

[dependencies]
tokio = { version = "=1.6.1", features = ["macros", "rt-multi-thread"] }
warp = "=0.3.1"
mobc = "=0.7.2"
mobc-postgres = { version = "=0.7.0", features = ["with-chrono-0_4", "with-serde_json-1"] }
serde = {version = "=1.0.126", features = ["derive"] }
serde_json = "=1.0.64"
thiserror = "=1.0.24"
common = { version = "0.1.0", path = "../common" }
base64 = "0.13.0"
vb_accumulator = "0.7.0"
ark-bls12-381 = "0.3.0"
bls12_381 = "0.6.0"
ark-ec = "0.3.0"
blake2 = "0.9.2"
ark-serialize = "0.3.0"

[profile.dev]
debug = 0

